--- a/index-START.html
+++ b/index-START.html
@@ -105,19 +105,40 @@
 
       const ordered = inventors.sort((a, b) => (a.year > b.year ? 1 : -1));
 
+      console.table(ordered);
+
       // Array.prototype.reduce()
       // 4. How many years did all the inventors live all together?
       const totalYears = inventors.reduce((total, inventor) => {
-        return total + (inventors.passed - inventor.year);
+        return total + (inventor.passed - inventor.year);
       }, 0);
 
       // 5. Sort the inventors by years lived
 
+      const oldest = inventors.sort((a, b) => {
+        const lastGuy = a.passed - a.year;
+        const nextGuy = b.passed - b.year;
+        return lastGuy > nextGuy ? -1 : 1; // if lastGuy is greater than nextGuy ( if that is true), return -1, else return 1
+      });
+
+      console.table(oldest);
+
       // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
       // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
+      const category = document.querySelector(".mw-category");
+      const links = Array.from(category.querySelectorAll("a"));
+      const de = links
+        .map((link) => link.textContext)
+        .filter((streetName) => streetName.includes("de"));
+
       // 7. sort Exercise
       // Sort the people alphabetically by last name
+      const alpha = people.sort((lastOne, nextOne) => {
+        const [aLast, aFirst] = lastOne.split(", ");
+        const [bLast, bFirst] = nextOne.split(", ");
+        return aLast > bLast ? 1 : -1; // if aLast is greater than bLast, return 1, else return -1
+      });
 
       // 8. Reduce Exercise
       // Sum up the instances of each of these
@@ -137,6 +158,13 @@
         "car",
         "truck",
       ];
+
+      const transportation = data.reduce((obj, item) => {
+        if (!obj[item]) {
+          obj[item] = 0;
+        }
+        obj[item]++;
+      }, {});
     </script>
   </body>
 </html>
